# build-system

./: BUILD  README.md  changelog.txt
aapt2/: BUILD.bazel  build.gradle
integration-test/: BUILD.bazel  gradle_perf_android_medium.BUILD  integration-test.bzl  integration-tests.gradle
integration-test/application/: BUILD.bazel  build.gradle
integration-test/databinding/: BUILD.bazel  build.gradle
integration-test/framework/: BUILD.bazel  build.gradle
integration-test/java-library-model-builder/: BUILD.bazel
integration-test/native/: BUILD.bazel  build.gradle
integration-test/test-projects/: commonBuildScript.gradle
integration-test/test-projects/abiPureSplits/: Android.mk  build.gradle
integration-test/test-projects/androidManifestInTest/: build.gradle
integration-test/test-projects/androidTestLibDep/: build.gradle
integration-test/test-projects/appWithTests/: build.gradle
integration-test/test-projects/basic/: build.gradle
integration-test/test-projects/butterknife/: build.gradle
integration-test/test-projects/bytecodeGenerationHooks/: build.gradle  settings.gradle
integration-test/test-projects/combinedAbiDensityPureSplits/: Android.mk  build.gradle
integration-test/test-projects/combinedDensityAndLanguagePureSplits/: build.gradle
integration-test/test-projects/conditionalApiUse/: build.gradle
integration-test/test-projects/daggerOne/: build.gradle
integration-test/test-projects/daggerTwo/: build.gradle
integration-test/test-projects/databinding/: build.forexperimental.gradle  build.gradle  build.library-withoutadapters.gradle  build.library.gradle  build.withoutadapters.gradle
integration-test/test-projects/databindingAndDagger/: build.gradle  build.specifyprocessor.gradle
integration-test/test-projects/databindingIncremental/: build.forexperimental.gradle  build.gradle
integration-test/test-projects/databindingMultiModule/: settings.gradle
integration-test/test-projects/databindingWithFeatures/: settings.gradle
integration-test/test-projects/densitySplit/: build.gradle
integration-test/test-projects/densitySplitInL/: build.gradle
integration-test/test-projects/dependencies/: build.gradle
integration-test/test-projects/dependenciesWithVariants/: build.gradle
integration-test/test-projects/duplicateNameImport/: build.gradle
integration-test/test-projects/dynamicApp/: settings.gradle
integration-test/test-projects/extractAnnotations/: build.gradle
integration-test/test-projects/extractRsEnabledAnnotations/: build.gradle
integration-test/test-projects/filteredOutVariants/: build.gradle
integration-test/test-projects/flavored/: build.gradle
integration-test/test-projects/flavors/: build.gradle
integration-test/test-projects/genFolderApi/: build.gradle
integration-test/test-projects/instant-unit-tests/: build.gradle
integration-test/test-projects/instantAppBundle/: gradle.properties  settings.gradle
integration-test/test-projects/jacocoWithButterKnife/: build.gradle
integration-test/test-projects/jarjarIntegration/: build.gradle
integration-test/test-projects/jarjarIntegrationLib/: build.gradle
integration-test/test-projects/kotlinApp/: build.gradle
integration-test/test-projects/libMinify/: build.gradle
integration-test/test-projects/libProguardConsumerFiles/: build.gradle
integration-test/test-projects/libTestDep/: build.gradle
integration-test/test-projects/lintCustomLocalAndPublishRules/: settings.gradle
integration-test/test-projects/lintCustomRules/: settings.gradle
integration-test/test-projects/lintDeps/: settings.gradle
integration-test/test-projects/lintKotlin/: settings.gradle
integration-test/test-projects/lintStandalone/: build.gradle
integration-test/test-projects/lintStandaloneCustomRules/: build.gradle  settings.gradle
integration-test/test-projects/lintStandaloneVital/: build.gradle
integration-test/test-projects/maxSdkVersion/: build.gradle
integration-test/test-projects/migrated/: build.gradle
integration-test/test-projects/minify/: build.gradle  test-proguard-rules.pro
integration-test/test-projects/multiDex/: build.gradle
integration-test/test-projects/multiDexWithLib/: build.gradle
integration-test/test-projects/multires/: build.gradle
integration-test/test-projects/namespacedApp/: build.gradle  gradle.properties
integration-test/test-projects/navigation/: build.gradle  settings.gradle
integration-test/test-projects/ndkLibPrebuilts/: build.gradle
integration-test/test-projects/ndkPrebuilts/: build.gradle
integration-test/test-projects/ndkRsHelloCompute/: build.gradle
integration-test/test-projects/ndkSanAngeles/: Android.mk  build.gradle
integration-test/test-projects/ndkSanAngeles2/: build.gradle
integration-test/test-projects/ndkVariants/: build.gradle
integration-test/test-projects/noPngCrunch/: build.gradle
integration-test/test-projects/noPreDex/: build.gradle
integration-test/test-projects/overlay1/: build.gradle
integration-test/test-projects/overlay2/: build.gradle
integration-test/test-projects/overlay3/: build.gradle
integration-test/test-projects/packagingOptions/: build.gradle
integration-test/test-projects/pkgOverride/: build.gradle
integration-test/test-projects/projectWithClassifierDep/: build.gradle
integration-test/test-projects/projectWithFeatures/: settings.gradle
integration-test/test-projects/projectWithFeaturesAndSplitABIs/: settings.gradle
integration-test/test-projects/projectWithIvyDependency/: build.gradle
integration-test/test-projects/projectWithModules/: build.gradle
integration-test/test-projects/pseudolocalized/: build.gradle
integration-test/test-projects/renamedApk/: build.gradle
integration-test/test-projects/renderscriptNdk/: build.gradle
integration-test/test-projects/rsSupportMode/: build.gradle
integration-test/test-projects/shrink/: build.gradle
integration-test/test-projects/simpleCompositeBuild/: settings.gradle
integration-test/test-projects/simpleManifestMergingTask/: build.gradle
integration-test/test-projects/singleFeature/: settings.gradle
(+1031 files in other folders)
